--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11,7 +11,7 @@ html {
 
 body {
     margin-top: 80px;
-    background-image: linear-gradient(to bottom right, #f2f3f9, #ffffff);
+    background-image: linear-gradient(to bottom right, #feffe9, #ffffff);
     /* background-image: linear-gradient( 135deg, #F05F57 10%, #360940 100%); */
     /* background-image: linear-gradient( 135deg, #636363 10%, #a2ab58 100%); */
 }
