--- a/templates/india-photography.html
+++ b/templates/india-photography.html
@@ -5,16 +5,16 @@
 </section>
 <section class="main main--india-photography">
     <div class="img__gallery img__gallery__vertical">
-        <a href="{{ url_for('static', filename='/img/india_photography/nandi_temple2.jpg') }}"
+        <a href="{{ url_for('static', filename='/img/india_photography/nandi_temple1.jpeg') }}"
             data-lightbox="india_photography"
             data-title="BhogaNandeeshwara Temple - Chikkaballapura | Karnataka | India">
-            <img src="{{ url_for('static', filename='/img/india_photography/nandi_temple2.jpg') }}" alt="">
+            <img src="{{ url_for('static', filename='/img/india_photography/nandi_temple1.jpeg') }}" alt="">
         </a>
     </div>
     <div class="img__gallery img__gallery__horizontal">
-        <a href="{{ url_for('static', filename='/img/india_photography/Peace_buddha.jpg') }}"
-            data-lightbox="india_photography" data-title="Peace is from within - Eindhoven | Netherlands">
-            <img src="{{ url_for('static', filename='/img/india_photography/Peace_buddha.jpg') }}" alt="">
+        <a href="{{ url_for('static', filename='/img/india_photography/krishna_kshetram.jpeg') }}"
+            data-lightbox="india_photography" data-title="Sri Krishna Kshetram - Kannur | India">
+            <img src="{{ url_for('static', filename='/img/india_photography/krishna_kshetram.jpeg') }}" alt="">
         </a>
     </div>
     <div class="img__gallery img__gallery__large">
@@ -24,9 +24,9 @@
         </a>
     </div>
     <div class="img__gallery img__gallery__large">
-        <a href="{{ url_for('static', filename='/img/india_photography/Peace_buddha.jpg') }}"
-            data-lightbox="india_photography" data-title="Peace is from within - Eindhoven | Netherlands">
-            <img src="{{ url_for('static', filename='/img/india_photography/Peace_buddha.jpg') }}" alt="">
+        <a href="{{ url_for('static', filename='/img/india_photography/mary_temple.jpeg') }}"
+            data-lightbox="india_photography" data-title="Ease of belief - Bengaluru | India">
+            <img src="{{ url_for('static', filename='/img/india_photography/mary_temple.jpeg') }}" alt="">
         </a>
     </div>
     <div class="img__gallery img__gallery__horizontal">
@@ -37,9 +37,17 @@
         </a>
     </div>
     <div class="img__gallery img__gallery__vertical">
-        <a href="{{ url_for('static', filename='/img/india_photography/pondi_crow.jpg') }}"
-            data-lightbox="india_photography" data-title="Fishing boat - Pondicherry | Tamil Nadu | India">
-            <img src="{{ url_for('static', filename='/img/india_photography/pondi_crow.jpg') }}" alt="">
+        <a href="{{ url_for('static', filename='/img/india_photography/sunset_point_kannur.jpeg') }}"
+            data-lightbox="india_photography" data-title="Sunset Point - Kannur | Kerala | India">
+            <img src="{{ url_for('static', filename='/img/india_photography/sunset_point_kannur.jpeg') }}" alt="">
+        </a>
+    </div>
+    <!-- Second addition -->
+    <div class="img__gallery img__gallery__vertical">
+        <a href="{{ url_for('static', filename='/img/india_photography/terrace_cloudy_sky.jpeg') }}"
+            data-lightbox="india_photography"
+            data-title="Storm is Approaching - Bengaluru | Karnataka | India">
+            <img src="{{ url_for('static', filename='/img/india_photography/terrace_cloudy_sky.jpeg') }}" alt="">
         </a>
     </div>
 </section>
