--- a/templates/abstract-photography.html
+++ b/templates/abstract-photography.html
@@ -45,10 +45,16 @@
             <img src="{{ url_for('static', filename='/img/abstract_photography/peace_on_the_east.jpg') }}" alt="">
         </a>
     </div>
+    <div class="img__gallery img__gallery__vertical">
+        <a href="{{ url_for('static', filename='/img/abstract_photography/music_concert_darmstadt.jpg') }}"
+            data-lightbox="abstract_photography" data-title="Schlossgraben Fest | Concert | Darmstadt.">
+            <img src="{{ url_for('static', filename='/img/abstract_photography/music_concert_darmstadt.jpg') }}" alt="">
+        </a>
+    </div>
 
     <div class="img__gallery img__gallery__large">
         <a href="{{ url_for('static', filename='/img/abstract_photography/pirates_lighter_shot.jpg') }}"
-            data-lightbox="abstract_photography" data-title="Lighter blazing away. Hostle time, Darmstadt">
+            data-lightbox="abstract_photography" data-title="Lighter blazing away. Hostel time, Darmstadt">
             <img src="{{ url_for('static', filename='/img/abstract_photography/pirates_lighter_shot.jpg') }}" alt="">
         </a>
     </div>
