--- a/templates/about.html
+++ b/templates/about.html
@@ -1,37 +1,16 @@
 {% extends "base.html" %}
 {% block content %}
-<main class="main--aboutme" >
+<main class="main--aboutme">
     <h1>About Me</h1>
     <article class="main--aboutme__article">
 
         <p>
-            I consider myself a Jack of All trades, who is preparing for the opportunities to Master at least some. I am an amature everything, mind you I am a good amature, however, I haven't yet decided what I will be mastering on. 
-            It could be my love for coding, or Cricket or Football, or photography or writing or reading or making Music or maybe, the god in all of us willing, all of it. My name Nikhil means "Everything". 
-            I always think, high time, I should live by it. I love learning new things and preserving whatever I have learnt and practise it to not let go of what I already know. It is a tough thing to keep at it.
-            But that is my fight, and I wake up in the hope of taking that one tiny step to consistency and discipline. Keeping my mind that my motivation is just to better myself, without giving much thought to why I am doing it.
-            As Steve Jobs said, <B>You can't connet the dot looking forward. You can only do that while looking back</B>. Retrospective when you have reached a point in the project where you can contemplate.
-            What we do have control in, is how ernestly we do what we is currently in front of us.
-        </p>
-
-        <p>
-            With over a decade of experience in software engineering, 
-            I specialize in backend development and DevOps, focusing on delivering scalable and reliable solutions. My journey spans multiple domains, from core banking systems in India to cutting-edge cloud migration projects in Europe. I thrive in environments where technology meets innovation, and I’m particularly passionate about transitioning legacy systems into modern infrastructures.
-        </p>
-
-        <p>
-            At ABN AMRO in Amsterdam, I played a pivotal role in migrating their internet banking system to cloud infrastructure using Microsoft Azure, improving system reliability and scalability. My expertise includes implementing new features, refactoring legacy code, and enhancing code quality, all while ensuring robust security and disaster recovery measures.
-        </p>
-
-        <p>
-            Previously, at CS Communications Systems GmbH in Germany, I was involved in developing full-stack web applications for the European Space Agency, managing everything from UI/UX design to backend integration. My experience extends to working with complex systems for satellite telemetry at EUMETSAT, where I was responsible for the entire software development lifecycle.
-        </p>
-
-        <p>
-            I hold a Master’s degree in Distributed Software Systems from Technische Universität Darmstadt, where I also focused on refactoring asynchronous systems. My passion for technology drives me to continuously learn and adapt, whether it’s mastering new tools or contributing to innovative projects.
-        </p>
-
-        <p>
-            When I’m not coding, you’ll find me exploring music production, photography, or staying active with football and yoga. I’m always eager to take on new challenges and contribute to impactful projects that push the boundaries of technology.
+            Hi, I'm Nikhil, a Jack of All Trades with a passion for mastering a wide range of interests like coding,
+            cricket, football, photography, writing, reading, and making music. I love learning new things and make it a
+            point to practice and preserve what I've learned so far. Consistency and discipline are my daily goals, as I
+            focus on improving myself without overthinking the reasons why. Inspired by Steve Jobs' belief that you can
+            only connect the dots looking backward, I strive to stay earnest in whatever is in front of me right now,
+            trusting that the bigger picture will come into focus with time.
         </p>
 
     </article>
