berlin 4 not showing on prod.

--- a/templates/germany-photography.html
+++ b/templates/germany-photography.html
@@ -22,7 +22,7 @@
     </div>
     <div class="img__gallery img__gallery__large">
         <a href="{{ url_for('static', filename='/img/germany_photography/ber4.jpg') }}" data-lightbox="germany_photography"
-            data-title="Cathedral | Berlin | Deutschland"><img src="{{ url_for('static', filename='/img/germany_photography/ber4.jpg') }}"
+            data-title="Berlin Cathedral."><img src="{{ url_for('static', filename='/img/germany_photography/ber4.jpg') }}"
                 alt=""></a>
     </div>
     <div class="img__gallery img__gallery__large">
