Corrected Typo - Changed Image

--- a/templates/germany-photography.html
+++ b/templates/germany-photography.html
@@ -18,11 +18,11 @@
     <div class="img__gallery img__gallery__vertical">
         <a href="{{ url_for('static', filename='/img/germany_photography/ger2.jpg') }}" data-lightbox="germany_photography"
             data-title="Red Boots in the forest"><img src="{{ url_for('static', filename='/img/germany_photography/ger2.jpg') }}"
-                alt="">ß</a>
+                alt=""></a>
     </div>
     <div class="img__gallery img__gallery__large">
-        <a href="{{ url_for('static', filename='/img/germany_photography/ber4.jpg') }}" data-lightbox="germany_photography"
-            data-title="Berlin Cathedral."><img src="{{ url_for('static', filename='/img/germany_photography/ber4.jpg') }}"
+        <a href="{{ url_for('static', filename='/img/germany_photography/german_summers_by_river.jpg') }}" data-lightbox="germany_photography"
+            data-title="East Side River - Berlin | Deutschland"><img src="{{ url_for('static', filename='/img/germany_photography/german_summers_by_river.jpg') }}"
                 alt=""></a>
     </div>
     <div class="img__gallery img__gallery__large">
