--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -245,6 +245,12 @@ body {
 .hero {
     width: 100%;
     margin-bottom: 1.5rem;
+    max-height: 75%;
+    border-radius: 10px;
+    
+
+    /* position:inherit; */
+    /* background: linear-gradient(180deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, .06) 44%, transparent 55%, transparent 65%, rgba(0, 0, 0, .05) 72%, rgba(0, 0, 0, .5)); */
 }
 
 .project {
@@ -349,5 +355,62 @@ body {
     line-height: 2rem;
     text-align: center;
 }
+
+footer {
+    font-family: monospace;
+    font-size: medium;
+    background-color: #333;
+    color: #fff;
+    padding: 0 0;
+    text-align: center;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+}
+footer a {
+    color: #86abda;
+    text-decoration: none;
+}
+footer a:hover {
+    text-decoration: underline;
+}
+.footer-content p {
+    margin: 0;
+}
+
+code {
+    /* background-color: #f4f4f4;
+    padding: 10px;
+    display: block;
+    margin-bottom: 20px;
+    border-left: 4px solid #ccc;
+    overflow-x: auto;
+    font-size: small;
+    text-align: left; */
+    display: block;
+    text-align: left;
+    padding: 10px;
+    background-color: #d4fada54;
+    border-radius: 10px;
+    border-left: 4px solid #ccc;
+    color: rgba(0, 0, 0, .9);
+    font-family:  monospace;
+    margin-bottom: 20px;
+    overflow-x: auto;
+    font-size: medium;
+    
+}
+.section {
+    margin-bottom: 30px;
+}
+
+.main--streams {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: large;
+    /* display: inline-block; */
+    display: grid;
+    text-align: left;
+}
+
 
 /* for error handler page */
