Addition of Photos to India-Photography

--- a/templates/india-photography.html
+++ b/templates/india-photography.html
@@ -50,6 +50,27 @@
             <img src="{{ url_for('static', filename='/img/india_photography/terrace_cloudy_sky.jpeg') }}" alt="">
         </a>
     </div>
+    <div class="img__gallery img__gallery__vertical">
+        <a href="{{ url_for('static', filename='/img/india_photography/kannur_lighthouse.jpeg') }}"
+            data-lightbox="india_photography"
+            data-title="Inside a lighthouse - Kannur | India">
+            <img src="{{ url_for('static', filename='/img/india_photography/kannur_lighthouse.jpeg') }}" alt="">
+        </a>
+    </div>
+    <div class="img__gallery img__gallery__vertical">
+        <a href="{{ url_for('static', filename='/img/india_photography/goldfish_blackfish.jpeg') }}"
+            data-lightbox="india_photography"
+            data-title="Five Seconds of memory - Bengaluru | Karnataka | India">
+            <img src="{{ url_for('static', filename='/img/india_photography/goldfish_blackfish.jpeg') }}" alt="">
+        </a>
+    </div>
+    <div class="img__gallery img__gallery__vertical">
+        <a href="{{ url_for('static', filename='/img/india_photography/chameleon.jpeg') }}"
+            data-lightbox="india_photography"
+            data-title="Urban Reptiles - Bengaluru | Karnataka | India">
+            <img src="{{ url_for('static', filename='/img/india_photography/chameleon.jpeg') }}" alt="">
+        </a>
+    </div>
 </section>
 
 {% endblock %}
