Adding Description and quotes to the photography pages.

--- a/templates/abstract-photography.html
+++ b/templates/abstract-photography.html
@@ -3,6 +3,21 @@
 <section class="main project__heading--main">
     <h2 class="project__heading">{{ project['name'] }}</h2>
 </section>
+
+<section class="main main--abstract-photography main--photography--quote">
+    <article>
+        "There is no abstract art. You must always start with something. Afterward you can remove all traces of reality." — <b>Pablo Picasso</b>
+    </article>
+</section>
+<section class="main main--abstract-photography main--photography--content">
+    <article>
+            The Abstract Photography project showcases a series of images exploring non-representational forms.
+            The photos capture vivid colors, textures, and shapes, aiming to evoke emotions and invite viewers to
+            interpret the abstract visuals in their own way.
+            The project highlights the artist's unique perspective on everyday elements, transforming them into striking
+            and imaginative pieces of art.
+    </article>
+</section>
 <section class="main main--abstract-photography">
     <div class="img__gallery img__gallery__large">
         <a href="{{ url_for('static', filename='/img/abstract_photography/brugge_canals.jpg') }}"
