--- a/templates/india-photography.html
+++ b/templates/india-photography.html
@@ -3,6 +3,19 @@
 <section class="main project__heading--main">
     <h2 class="project__heading">{{ project['name'] }}</h2>
 </section>
+<section class="main main--india-photography main--photography--quote">
+    <article>
+        "hOMe - Where it all began!"
+    </article>
+</section>
+<section class="main main--india-photography main--photography--content">
+    <article>
+            The project dives into the vibrant essence of India through a captivating photographic journey. 
+            This collection showcases the country's rich cultural heritage, breathtaking landscapes, and the colorful tapestry of everyday life. 
+            Each image tells a story, reflecting India's diversity and spirit, from bustling cities to serene rural vistas. 
+            Join me in exploring the beauty and complexity of this incredible nation, where tradition meets modernity.
+    </article>
+</section>
 <section class="main main--india-photography">
     <div class="img__gallery img__gallery__vertical">
         <a href="{{ url_for('static', filename='/img/india_photography/nandi_temple1.jpeg') }}"
